deploy/manifests/examples/gatewayclass-nlb.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: oke-nlb
spec:
  controllerName: oke-gateway-api.gemyago.github.io/oke-nlb-gateway-controller
