deploy/manifests/examples/gateway-https-mtls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: oke-gateway
spec:
  gatewayClassName: oke-gateway-api
  infrastructure:
    parametersRef:
      group: oke-gateway-api.gemyago.github.io
      kind: GatewayConfig
      name: oke-gateway-config
  tls:
    frontend:
      default:
        validation:
          caCertificateRefs:
            - group: ""
              kind: ConfigMap
              name: client-ca-bundle
          mode: AllowValidOnly
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: oke-gw-example-https-cert
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mtls-api
spec:
  parentRefs:
    - name: oke-gateway
      sectionName: https
  hostnames:
    - api.example.com
  rules:
    - backendRefs:
        - name: oke-gateway-example-server
          port: 8080
