deploy/manifests/examples/listenerset-https-secret.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-alb
spec:
  gatewayClassName: oke-gateway-api
  infrastructure:
    parametersRef:
      group: oke-gateway-api.gemyago.github.io
      kind: GatewayConfig
      name: oke-gateway-config
  allowedListeners:
    namespaces:
      from: Same
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: api-https
      sectionName: https
  hostnames:
    - api.example.com
  rules:
    - backendRefs:
        - name: oke-gateway-example-server
          port: 8080
