deploy/manifests/examples/listenerset-nlb.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: oke-nlb-gateway
spec:
  gatewayClassName: oke-nlb
  infrastructure:
    parametersRef:
      group: oke-gateway-api.gemyago.github.io
      kind: GatewayConfig
      name: oke-nlb-gateway-config
  allowedListeners:
    namespaces:
      from: Same
  listeners:
    - name: health
      protocol: TCP
      port: 10256
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: listener-set-rtmp
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: oke-nlb-extra-listeners
      sectionName: rtmp
  rules:
    - backendRefs:
        - name: rtmp-service
          port: 1935
